--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,12 @@ language: generic
 sudo: false
 
 env:
-  global:
-    - CURL="curl -fsSkL --retry 9 --retry-delay 9"
   matrix:
-  - EMACS_VERSION=23.4
-  - EMACS_VERSION=24.5
-  - EMACS_VERSION=25.3
-  - EMACS_VERSION=26.1
-  - EMACS_VERSION=master
-install:
-  - $CURL -O https://github.com/npostavs/emacs-travis/releases/download/bins/emacs-bin-${EMACS_VERSION}.tar.gz
-  - tar xf emacs-bin-${EMACS_VERSION}.tar.gz -C /
-  - export EMACS=/tmp/emacs/bin/emacs
+    - EMACS_VERSION=verbose-ubuntu-min-23.4
+    - EMACS_VERSION=verbose-ubuntu-min-24.5
+    - EMACS_VERSION=verbose-alpine-min-25.3
+    - EMACS_VERSION=verbose-alpine-min-26.1
+    - EMACS_VERSION=verbose-alpine-min-26.2
 
 script:
-  - make
-  - make check
+  - make .make/$EMACS_VERSION
